feat(typography): add Arabic fonts (Amiri, KFGQPC) and wire through settings; apply to Surah list/detail

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Prayer times need your location to calculate accurate times.</string>
 </dict>
 </plist>
