--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,42 +1,43 @@
 name: ikra
-description: Ikra - Offline/Online Qur'an App (Hive + BLoC)
+description: Ikra Quran app
+publish_to: "none"
+version: 0.1.0+1
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
 
-  # State management
-  flutter_bloc: ^9.1.1
+  # State & DI
+  flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  get_it: ^7.6.7
 
-  # Local database
+  # Data & network
+  http: ^1.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
-  # (Optional) JSON helpers for future online API integrations
-  json_annotation: ^4.9.0
+  # Features
+  geolocator: ^14.0.2
+  just_audio: ^0.9.39
+  connectivity_plus: ^6.0.3
 
-  geolocator:
-  adhan_dart:
-  just_audio:
-  http:
+  # UI
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.12
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.8
   hive_generator: ^2.0.1
-  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
 
-  # Put your JSON file here: assets/quran/quran.json
   assets:
     - assets/quran/quran.json
 
@@ -45,9 +46,7 @@ flutter:
       fonts:
         - asset: assets/fonts/amiri/AmiriQuran-Regular.ttf
           weight: 400
-
     - family: KFGQPCUthmanicHafs
       fonts:
         - asset: assets/fonts/kfgqpc/KFGQPCUthmanicHafs-Regular.otf
           weight: 400
-
